// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`primitives 1. without attributes: 1. without attributes 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(Text, null, "hello");
};

`;

exports[`primitives 2. with plane color value: 2. with plane color value 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color="red">hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;

exports[`primitives 3. with string value inside expression: 3. with string value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-background-color={"red"}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        backgroundColor: "red",
      },
    },
    "hello"
  );
};

`;

exports[`primitives 4. with number value inside expression: 4. with number value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-p={16}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        padding: 16,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 5. with boolean value raw: 5. with boolean value raw 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-enabled>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: true,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 6. with boolean value inside expression: 6. with boolean value inside expression 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  return <Text s-enabled={false}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: false,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 7. with local variable: 7. with local variable 1`] = `


import React from 'react';
import Text from 'react-native';
const App=()=>{
  const enabled=true;
  return <Text s-enabled={enabled}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const App = () => {
  const enabled = true;
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: enabled,
      },
    },
    "hello"
  );
};

`;

exports[`primitives 8. with local variable constant: 8. with local variable constant 1`] = `


import React from 'react';
import Text from 'react-native';
const getEnabled=()=>true
const App=()=>{
  return <Text s-enabled={getEnabled()}>hello</Text>
}
      

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import Text from "react-native";
const getEnabled = () => true;
const App = () => {
  return /*#__PURE__*/ React.createElement(
    Text,
    {
      style: {
        enabled: getEnabled(),
      },
    },
    "hello"
  );
};

`;
